--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,16 @@
             <version>12.1.0.2</version>
         </dependency>
 
+
+        <!-- tests-->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+
+
     </dependencies>
     <repositories>
         <repository>
